# src/services/swagger/gateway.swagger.json
@@ -16,6 +16,70 @@
     "application/json"
   ],
   "paths": {
+    "/medicalpoint/admin": {
+      "delete": {
+        "summary": "Delete Admin from chain, not delete in database",
+        "operationId": "Gateway_DeleteAdmin",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/medical_chainDeleteAdminResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/medical_chainDeleteAdminRequest"
+            }
+          }
+        ],
+        "tags": [
+          "Gateway"
+        ]
+      },
+      "post": {
+        "summary": "Add admin",
+        "operationId": "Gateway_PostAdmin",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/medical_chainPostAdminResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/medical_chainPostAdminRequest"
+            }
+          }
+        ],
+        "tags": [
+          "Gateway"
+        ]
+      }
+    },
     "/medicalpoint/admin-transfer": {
       "post": {
         "summary": "Admin transfer point from system to user",
@@ -193,6 +257,29 @@
         ]
       }
     },
+    "/medicalpoint/system-balance": {
+      "get": {
+        "summary": "Get system balances",
+        "operationId": "Gateway_GetSystemBalance",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/medical_chainGetSystemBalanceResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "tags": [
+          "Gateway"
+        ]
+      }
+    },
     "/medicalpoint/transfer": {
       "post": {
         "summary": "Transfer point from user to user",
@@ -261,16 +348,31 @@
     }
   },
   "definitions": {
-    "GetBalanceResponsePoint": {
+    "medical_chainDeleteAdminRequest": {
       "type": "object",
       "properties": {
-        "denom": {
+        "userId": {
           "type": "string",
-          "title": "denom name of token"
+          "title": "userId of superadmin in main server"
         },
-        "amount": {
+        "adminId": {
           "type": "string",
-          "title": "amount of token"
+          "title": "adminId of admin to delete"
+        }
+      }
+    },
+    "medical_chainDeleteAdminResponse": {
+      "type": "object",
+      "properties": {
+        "userId": {
+          "type": "string"
+        },
+        "adminId": {
+          "type": "string"
+        },
+        "txh": {
+          "type": "string",
+          "title": "txh of transaction delete-admin"
         }
       }
     },
@@ -283,9 +385,75 @@
         "balances": {
           "type": "array",
           "items": {
-            "$ref": "#/definitions/GetBalanceResponsePoint"
+            "$ref": "#/definitions/medical_chainGetBalanceResponsePoint"
           },
           "title": "list of balances"
+        }
+      }
+    },
+    "medical_chainGetBalanceResponsePoint": {
+      "type": "object",
+      "properties": {
+        "denom": {
+          "type": "string",
+          "title": "denom name of token"
+        },
+        "amount": {
+          "type": "string",
+          "title": "amount of token"
+        }
+      }
+    },
+    "medical_chainGetSystemBalanceResponse": {
+      "type": "object",
+      "properties": {
+        "balances": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/medical_chainGetSystemBalanceResponsePoint"
+          },
+          "title": "list of balances"
+        }
+      }
+    },
+    "medical_chainGetSystemBalanceResponsePoint": {
+      "type": "object",
+      "properties": {
+        "denom": {
+          "type": "string",
+          "title": "denom name of token"
+        },
+        "amount": {
+          "type": "string",
+          "title": "amount of token"
+        }
+      }
+    },
+    "medical_chainPostAdminRequest": {
+      "type": "object",
+      "properties": {
+        "userId": {
+          "type": "string",
+          "title": "userId of superadmin in main server"
+        },
+        "adminId": {
+          "type": "string",
+          "title": "adminId of admin to add"
+        }
+      }
+    },
+    "medical_chainPostAdminResponse": {
+      "type": "object",
+      "properties": {
+        "userId": {
+          "type": "string"
+        },
+        "adminId": {
+          "type": "string"
+        },
+        "txh": {
+          "type": "string",
+          "title": "txh of transaction create-admin"
         }
       }
     },
